--- a/colors/green.css
+++ b/colors/green.css
@@ -6,7 +6,7 @@
 	a:hover, a:focus,
 	.nav-caption > span,
 	.tweet_list > li:before {
-		color: #7bc82f;
+		color: #0000FF;
 	}
 
 	.pace,
@@ -17,7 +17,7 @@
 	.btn-black.active,
 	.nav-pills > li > a:hover, .nav-pills > li > a:focus, .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus,
 	.resume-box:hover .title-bar-hover {
-		border-color: #7bc82f;
+		border-color: #0000FF;
 	}
 
 	.bg-primary,
@@ -32,5 +32,5 @@
 	.owl-theme .owl-controls .owl-page.active span,
 	.owl-theme .owl-controls.clickable .owl-page:hover span,
 	.nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
-		background-color: #7bc82f;
+		background-color: #0000FF;
 	}
